# pygame-dom

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
docs/: docs.css  docs.html  docs.js
docs/pages/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
pygame_dom/: __init__.py  default.css  page.py  rui.py  style_sheet.py  ui_bind.py  ui_element.py  ui_event.py  ui_render_object.py  ui_state.py
pygame_dom/cache/: cache.py  registry.py
pygame_dom/data/: named_colors.py  transitions.py
pygame_dom/elements/: __init__.py  element_handler.py  img_elements.py  text_elements.py
pygame_dom/logic/: state_eval.py
pygame_dom/parsers/css_parser/: css_ast.py  css_ast_value_parser.py  css_ast_value_types.py  css_data.py  css_parser.py  css_parser_errors.py  css_parser_main.py  css_token.py  css_tokenizer.py  test.css
pygame_dom/style/: default.css
