[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-dom"
version = "0.1.2"
description = "UI framework for creating pygame UI using HTML and CSS"
authors = [
    { name = "RAKETOMET135" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame>=2.0.0"
]

[project.urls]
Docs = "https://raketomet135.github.io/pygame-dom/docs/docs.html"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygame_dom*"]

[tool.setuptools.package-data]
"pygame_dom.style" = ["*.css"]